# fintech-compliance-copilot

./: .env  .gitignore  pyproject.toml
config/: logging_config.py  settings.py
src/ingestion/: loader.py  splitter.py
